--- a/api/package.json
+++ b/api/package.json
@@ -17,37 +17,37 @@
   "dependencies": {
     "@sendgrid/mail": "6.0.0",
     "bcrypt": "^1.0.2",
-    "date-fns": "^1.28.5",
+    "date-fns": "^1.29.0",
     "dotenv": "^4.0.0",
     "faker": "^4.1.0",
-    "fs-extra": "^4.0.0",
-    "install": "^0.10.1",
-    "ioredis": "^3.1.1",
+    "fs-extra": "^4.0.3",
+    "install": "^0.10.4",
+    "ioredis": "^3.2.2",
     "jest": "^20.0.4",
-    "joi": "^10.6.0",
-    "jsonwebtoken": "^7.4.1",
+    "joi": "^13.1.2",
+    "jsonwebtoken": "^8.2.0",
     "kcors": "^2.0.0",
     "knex": "^0.13.0",
-    "koa": "^2.0.0-alpha.3",
+    "koa": "^2.5.0",
     "koa-bodyparser": "^3.0.0",
     "koa-json-error": "^3.1.2",
     "koa-ratelimit": "^4.0.0",
-    "koa-router": "^7.0.1",
-    "koa-useragent": "^1.0.0",
-    "log4js": "^2.2.0",
-    "mysql": "^2.14.1",
-    "npm": "^5.3.0",
-    "pm2": "^2.6.1",
-    "randexp": "^0.4.5"
+    "koa-router": "^7.4.0",
+    "koa-useragent": "^1.0.1",
+    "log4js": "^2.5.3",
+    "mysql": "^2.15.0",
+    "npm": "^5.7.1",
+    "pm2": "^2.10.1",
+    "randexp": "^0.4.9"
   },
   "devDependencies": {
-    "axios-mock-adapter": "^1.9.0",
+    "axios-mock-adapter": "^1.14.1",
     "babel-cli": "^6.5.1",
     "babel-polyfill": "^6.5.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.6.1",
     "babel-register": "^6.9.0",
-    "nodemon": "^1.9.2",
-    "prettier": "^1.5.3",
+    "nodemon": "^1.17.1",
+    "prettier": "^1.11.1",
     "supertest": "^1.2.0"
   },
   "babel": {
