--- a/web/package.json
+++ b/web/package.json
@@ -14,65 +14,66 @@
     "dependencies": {
         "axios": "^0.15.3",
         "babel-jest": "^20.0.3",
-        "bootstrap": "^4.0.0-beta",
-        "es6-promise": "^4.1.1",
+        "bootstrap": "^4.0.0",
+        "es6-promise": "^4.2.4",
         "jest": "^20.0.4",
-        "jest-vue": "^0.5.1",
-        "jquery": "^3.1.1",
+        "jest-vue": "^0.5.6",
+        "jquery": "^3.3.1",
         "jwt-decode": "^2.2.0",
-        "vue": "2.4.2",
-        "vue-js-modal": "^1.2.8",
+        "popper.js": "^1.12.9",
+        "vue": "^2.5.13",
+        "vue-js-modal": "^1.3.12",
         "vue-progressbar": "^0.7.2",
-        "vue-router": "^2.3.1",
-        "vue-toasted": "^1.1.17",
+        "vue-router": "^2.8.1",
+        "vue-toasted": "^1.1.24",
         "vuelidate": "^0.5.0",
-        "vuex": "^2.3.1"
+        "vuex": "^2.5.0"
     },
     "devDependencies": {
         "autoprefixer": "^6.7.2",
         "babel-core": "^6.26.0",
         "babel-eslint": "^7.1.1",
         "babel-loader": "^6.2.10",
-        "babel-preset-env": "^1.6.0",
+        "babel-preset-env": "^1.6.1",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-stage-2": "^6.22.0",
         "babel-register": "^6.26.0",
         "chalk": "^1.1.3",
-        "connect-history-api-fallback": "^1.3.0",
-        "copy-webpack-plugin": "^4.0.1",
-        "css-loader": "^0.28.5",
+        "connect-history-api-fallback": "^1.5.0",
+        "copy-webpack-plugin": "^4.5.0",
+        "css-loader": "^0.28.10",
         "eslint": "^3.19.0",
         "eslint-config-standard": "^6.2.1",
         "eslint-friendly-formatter": "^2.0.7",
         "eslint-loader": "^1.7.1",
         "eslint-plugin-html": "^2.0.0",
-        "eslint-plugin-promise": "^3.4.0",
+        "eslint-plugin-promise": "^3.6.0",
         "eslint-plugin-standard": "^2.0.1",
         "eventsource-polyfill": "^0.9.6",
-        "express": "^4.14.1",
+        "express": "^4.16.2",
         "extract-text-webpack-plugin": "^2.0.0",
         "file-loader": "^0.11.1",
         "friendly-errors-webpack-plugin": "^1.1.3",
         "html-webpack-plugin": "^2.28.0",
         "http-proxy-middleware": "^0.17.3",
-        "node-sass": "^4.5.3",
+        "node-sass": "^4.7.2",
         "opn": "^4.0.2",
         "optimize-css-assets-webpack-plugin": "^1.3.0",
-        "ora": "^1.2.0",
-        "rimraf": "^2.6.0",
-        "sass-loader": "^6.0.6",
-        "semver": "^5.3.0",
+        "ora": "^1.4.0",
+        "rimraf": "^2.6.2",
+        "sass-loader": "^6.0.7",
+        "semver": "^5.5.0",
         "shelljs": "^0.7.6",
         "url-loader": "^0.5.8",
-        "vue-loader": "^12.1.0",
-        "vue-style-loader": "^3.0.1",
-        "vue-template-compiler": "^2.3.3",
+        "vue-loader": "^12.2.2",
+        "vue-style-loader": "^3.1.2",
+        "vue-template-compiler": "^2.5.13",
         "vue-test-utils": "git+https://github.com/vuejs/vue-test-utils.git",
         "webpack": "^2.6.1",
-        "webpack-bundle-analyzer": "^2.2.1",
-        "webpack-dev-middleware": "^1.10.0",
-        "webpack-hot-middleware": "^2.19.0",
-        "webpack-merge": "^4.1.0"
+        "webpack-bundle-analyzer": "^2.11.1",
+        "webpack-dev-middleware": "^1.12.2",
+        "webpack-hot-middleware": "^2.21.2",
+        "webpack-merge": "^4.1.2"
     },
     "engines": {
         "node": ">= 4.0.0",
